--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "MTE0MzMyMjM2MTY1NTk5MjQ0MA.Gw0Qy2.tAlz1k8CcPbgeiOsJftJoafGo9EZx2K9Di8yME",
-  "clientId": "1143322361655992440",
-  "guildId": "1143321579594469456"
+  "token": "TOKEN",
+  "clientId": "CLIENTID",
+  "guildId": "SERVERID"
 }
