--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@types/node": "^18.0.6",
     "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
     "node-fetch": "^3.2.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.48.0"
   }
 }
